<resources>
    <string name="app_name">Kasatria App</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Back to Login</string>
    <string name="click_to_register">Sign Up Now</string>
    <string name="signout">Sign Out</string>
    <string name="contact_admin_login">Forget password? Contact support.</string>
    <string name="kasatria_logo_black">kasatria_logo_black</string>
    <string name="title_Register">Register</string>
    <string name="welcome_text">Welcome</string>
    <string name="title_Login">Login</string>
    <string name="c_id_text">Customer ID</string>
</resources>