<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="170dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/kasatria_logo_black"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/user_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/charcoal"
            android:padding="2dp"
            android:layout_gravity="center"/>


        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signout"
            android:text="@string/signout"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/charcoal"
            app:cornerRadius="20dp"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/c_id_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_id_text"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textColor="@color/charcoal"
            android:padding="2dp"
            android:layout_marginTop="80dp"
            android:layout_gravity="center"/>

    </LinearLayout>


</LinearLayout>