<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".Login"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/kasatria_logo_black"
        android:contentDescription="@string/kasatria_logo_black"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="24dp">



            <TextView
                android:id="@+id/regText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/title_Register"
                android:textColor="@color/charcoal"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"  />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/email"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/baseline_person_24"
                    android:hint="Enter Email"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:textColor="@color/charcoal"
                    android:textColorHighlight="@color/light_gray"
                    android:layout_marginTop="40dp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/password"
                    android:background="@drawable/custom_edittext"
                    android:drawableLeft="@drawable/baseline_lock_24"
                    android:hint="Enter Password"
                    android:inputType="textPassword"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:textColor="@color/charcoal"
                    android:textColorHighlight="@color/light_gray"
                    android:layout_marginTop="15dp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:id="@+id/btn_register"
                android:text="@string/register"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/black"
                app:cornerRadius="20dp"
                android:textColor="@color/white"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="Contact Support admin@kasatria.com"
        android:textSize="14sp"
        android:textColor="@color/charcoal"
        android:textAlignment="center"
        android:id="@+id/signupText"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginNow"
        android:text="@string/click_to_login"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/charcoal"
        android:layout_marginTop="5dp"/>



</LinearLayout>